log
Fri, May 16, 2025  3:26:27 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Fri, May 16, 2025  3:42:49 PM: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
60dccc7
Fri, May 16, 2025  4:06:47 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 35/70
a0fe682
Fri, May 16, 2025  4:15:17 PM: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
164178b
Fri, May 16, 2025  4:16:37 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
34405cf
Fri, May 16, 2025  4:27:37 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
0ce2565
Fri, May 16, 2025  4:29:29 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c: In function 'test_dfs':
test.c:206:19: error: implicit declaration of function 'DFS' [-Werror=implicit-function-declaration]
     Node* final = DFS(initial, &cont);
                   ^~~
test.c:206:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     final = DFS(initial, &cont);
           ^
cc1.exe: all warnings being treated as errors
56c00ae
Fri, May 16, 2025  4:29:59 PM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
7ad13e0
Fri, May 16, 2025  4:34:04 PM: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
ed0afb7
